# todo-app

./: CLAUDE.md
.claude/: settings.local.json
.specify/memory/: constitution.md  error.md
Back-End/: .env  alembic.ini  pyproject.toml  requirements.txt
Back-End/alembic/: env.py
Back-End/src/: main.py
Back-End/src/api/: errors.py
Back-End/src/models/: __init__.py
console-app/: agent.md  prompt.md  tasks.json
front/: package-lock.json  package.json
front/app/: Providers.tsx
front/components/layout/: Header.tsx
front/lib/: api.ts  auth.ts  constants.ts  mockApi.ts  utils.ts
history/prompts/001-backend-crud-api/: 0001-backend-crud-api-spec.spec.prompt.md  0002-backend-crud-api-plan.plan.prompt.md  0003-backend-crud-api-tasks.tasks.prompt.md
history/prompts/001-console-todo-app/: 0001-console-todo-app-specification.spec.prompt.md  0002-console-todo-implementation-plan.plan.prompt.md  0003-console-todo-task-breakdown.tasks.prompt.md  0004-console-todo-implementation.green.prompt.md
history/prompts/002-phase-2-backend/: 0001-phase-2-backend-specification-created.spec.prompt.md  0002-phase-2-backend-plan-created.plan.prompt.md  (+1 more)
lib/: mockApi.ts
specs/001-backend-crud-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase-2-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-frontend-auth-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+18 files in other folders)
