[project]
name = "todo-backend-api"
version = "0.1.0"
description = "FastAPI backend for task management with JWT authentication"
authors = [
    {name = "Todo App Team"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.18",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1",
    "email-validator>=2.3.0",
]

[tool.pytest]
pytest_plugins = ["asyncio"]
